# cv_bmc

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: OpenCV.cmake  cv_bmc.cmake
cv_bmc/: CMakeLists.txt
cv_bmc/imgproc/: CMakeLists.txt  bmc_threshold.cpp
modules/: CMakeLists.txt
modules/imgproc/: CMakeLists.txt  bmc_threshold.cpp
